--- a/denoise_server.ipynb
+++ b/denoise_server.ipynb
@@ -2,31 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import logging\n",
     "import os\n",
-    "import shutil\n",
+    "import io\n",
+    "import subprocess\n",
+    "import anvil.server\n",
+    "from PIL import Image\n",
+    "from anvil import BlobMedia\n",
     "from utils import sr_utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8589934592\n",
+      "69206016\n",
+      "66917888\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.cuda.get_device_properties(0).total_memory)\n",
+    "print(torch.cuda.memory_reserved(0))\n",
+    "print(torch.cuda.memory_allocated(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_name = \"BSRGAN\"\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-    "logger = logging.getLogger('blind_sr_log')"
+    "logger = logging.getLogger(\"blind_sr_log\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -43,74 +68,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anvil.server.connect(os.environ.get(\"anvil_uplink\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@anvil.server.callable\n",
+    "def image_super_resolution(image):\n",
+    "    # save new image\n",
+    "    image = Image.open(io.BytesIO(image.get_bytes()))\n",
+    "    image.save(\"testsets/diffusion/diffusion.png\", format=\"PNG\")\n",
+    "\n",
+    "    # apply super resolution\n",
+    "    sr_utils.super_resolution(model, logger, device)\n",
+    "    # subprocess.run([\"python\", \"super_resolution.py\"])\n",
+    "\n",
+    "    # read image as bytes\n",
+    "    sr_image = Image.open(\"results/diffusion_results/diffusion_sr.png\")\n",
+    "    output = io.BytesIO()\n",
+    "    sr_image.save(output, format=\"PNG\")\n",
+    "    content = output.getvalue()\n",
+    "\n",
+    "    # pass to anvil as a BlobMedia\n",
+    "    return BlobMedia(\"image/png\", content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22-06-03 13:34:46.202 :           GPU ID : 0\n",
-      "22-06-03 13:34:46.213 :    1 --> Lincoln.png\n"
+      "22-06-03 22:17:36.216 :           GPU ID : 0\n",
+      "22-06-03 22:17:36.219 :    1 --> diffusion.png\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogHandlers setup!\n"
+      "LogHandlers exist!\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22-06-03 13:34:48.150 :    2 --> building.png\n",
-      "22-06-03 13:34:48.499 :    3 --> butterfly.png\n",
-      "22-06-03 13:34:49.385 :    4 --> butterfly2.png\n",
-      "22-06-03 13:34:49.840 :    5 --> chip.png\n",
-      "22-06-03 13:34:50.052 :    6 --> comic1.png\n",
-      "22-06-03 13:34:50.260 :    7 --> comic2.png\n",
-      "22-06-03 13:34:50.710 :    8 --> comic3.png\n",
-      "22-06-03 13:34:51.614 :    9 --> computer.png\n",
-      "22-06-03 13:34:52.688 :   10 --> dog.png\n",
-      "22-06-03 13:34:54.088 :   11 --> dped_crop00061.png\n",
-      "22-06-03 13:34:54.864 :   12 --> foreman.png\n",
-      "22-06-03 13:34:55.741 :   13 --> frog.png\n",
-      "22-06-03 13:34:56.511 :   14 --> oldphoto2.png\n",
-      "22-06-03 13:34:56.885 :   15 --> oldphoto3.png\n",
-      "22-06-03 13:34:57.295 :   16 --> oldphoto6.png\n",
-      "22-06-03 13:34:58.174 :   17 --> painting.png\n",
-      "22-06-03 13:34:58.948 :   18 --> pattern.png\n",
-      "22-06-03 13:34:59.450 :   19 --> ppt3.png\n",
-      "22-06-03 13:35:00.180 :   20 --> tiger.png\n"
+      "22-06-03 22:21:27.656 :           GPU ID : 0\n",
+      "22-06-03 22:21:27.661 :    1 --> diffusion.png\n"
      ]
     },
     {
-     "ename": "RuntimeError",
-     "evalue": "[enforce fail at ..\\c10\\core\\CPUAllocator.cpp:79] data. DefaultCPUAllocator: not enough memory: you tried to allocate 24883200 bytes.",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogHandlers exist!\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32me:\\BSRGAN\\denoise_server.ipynb Cell 4'\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BSRGAN/denoise_server.ipynb#ch0000003?line=0'>1</a>\u001b[0m sr_utils\u001b[39m.\u001b[39;49msuper_resolution(model, logger, device, testset_Ls\u001b[39m=\u001b[39;49m[\u001b[39m\"\u001b[39;49m\u001b[39mRealSRSet\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n",
-      "File \u001b[1;32me:\\BSRGAN\\utils\\sr_utils.py:72\u001b[0m, in \u001b[0;36msuper_resolution\u001b[1;34m(model, logger, device, testset_Ls, save_results)\u001b[0m\n\u001b[0;32m     <a href='file:///e%3A/BSRGAN/utils/sr_utils.py?line=66'>67</a>\u001b[0m img_E \u001b[39m=\u001b[39m model(img_L)\n\u001b[0;32m     <a href='file:///e%3A/BSRGAN/utils/sr_utils.py?line=68'>69</a>\u001b[0m \u001b[39m# --------------------------------\u001b[39;00m\n\u001b[0;32m     <a href='file:///e%3A/BSRGAN/utils/sr_utils.py?line=69'>70</a>\u001b[0m \u001b[39m# (3) img_E\u001b[39;00m\n\u001b[0;32m     <a href='file:///e%3A/BSRGAN/utils/sr_utils.py?line=70'>71</a>\u001b[0m \u001b[39m# --------------------------------\u001b[39;00m\n\u001b[1;32m---> <a href='file:///e%3A/BSRGAN/utils/sr_utils.py?line=71'>72</a>\u001b[0m img_E \u001b[39m=\u001b[39m util\u001b[39m.\u001b[39;49mtensor2uint(img_E)\n\u001b[0;32m     <a href='file:///e%3A/BSRGAN/utils/sr_utils.py?line=72'>73</a>\u001b[0m \u001b[39mif\u001b[39;00m save_results:\n\u001b[0;32m     <a href='file:///e%3A/BSRGAN/utils/sr_utils.py?line=73'>74</a>\u001b[0m     util\u001b[39m.\u001b[39mimsave(\n\u001b[0;32m     <a href='file:///e%3A/BSRGAN/utils/sr_utils.py?line=74'>75</a>\u001b[0m         img_E,\n\u001b[0;32m     <a href='file:///e%3A/BSRGAN/utils/sr_utils.py?line=75'>76</a>\u001b[0m         os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(E_path, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mimg_name\u001b[39m}\u001b[39;00m\u001b[39m_sr.png\u001b[39m\u001b[39m\"\u001b[39m),\n\u001b[0;32m     <a href='file:///e%3A/BSRGAN/utils/sr_utils.py?line=76'>77</a>\u001b[0m     )\n",
-      "File \u001b[1;32me:\\BSRGAN\\utils\\utils_image.py:300\u001b[0m, in \u001b[0;36mtensor2uint\u001b[1;34m(img)\u001b[0m\n\u001b[0;32m    <a href='file:///e%3A/BSRGAN/utils/utils_image.py?line=298'>299</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtensor2uint\u001b[39m(img):\n\u001b[1;32m--> <a href='file:///e%3A/BSRGAN/utils/utils_image.py?line=299'>300</a>\u001b[0m     img \u001b[39m=\u001b[39m img\u001b[39m.\u001b[39;49mdata\u001b[39m.\u001b[39;49msqueeze()\u001b[39m.\u001b[39;49mfloat()\u001b[39m.\u001b[39;49mclamp_(\u001b[39m0\u001b[39;49m, \u001b[39m1\u001b[39;49m)\u001b[39m.\u001b[39;49mcpu()\u001b[39m.\u001b[39mnumpy()\n\u001b[0;32m    <a href='file:///e%3A/BSRGAN/utils/utils_image.py?line=300'>301</a>\u001b[0m     \u001b[39mif\u001b[39;00m img\u001b[39m.\u001b[39mndim \u001b[39m==\u001b[39m \u001b[39m3\u001b[39m:\n\u001b[0;32m    <a href='file:///e%3A/BSRGAN/utils/utils_image.py?line=301'>302</a>\u001b[0m         img \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mtranspose(img, (\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m0\u001b[39m))\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: [enforce fail at ..\\c10\\core\\CPUAllocator.cpp:79] data. DefaultCPUAllocator: not enough memory: you tried to allocate 24883200 bytes."
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_8388\\2185642266.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0manvil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mserver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwait_forever\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\anvil\\server.py\u001b[0m in \u001b[0;36mwait_forever\u001b[1;34m()\u001b[0m\n\u001b[0;32m    428\u001b[0m     \u001b[0m_get_connection\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    429\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 430\u001b[1;33m         \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "sr_utils.super_resolution(model, logger, device, testset_Ls=[\"RealSRSet\"])"
+    "anvil.server.wait_forever()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "9dee633ba2130051bdaa5f6b5bf764757b2eceeb46743112637f16f9185f6636"
+   "hash": "8c2dc7f55a4afb133f9671f18548a683b80d7f864af89313bd9839ac682f147f"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3.7.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -124,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.8"
   },
   "orig_nbformat": 4
  },
